# WizardCalls

./: .gitignore  Readme.md  pyproject.toml  wizardcalls.py
.github/workflows/: publish-to-pypi.yml
Data/: nt_api.json
Data/templates/: Djb2.c
Solution File/: .editorconfig  wizardcalls.sln
Solution File/proj/: wizardcalls.vcxproj  wizardcalls.vcxproj.filters
Solution File/src/include/: wizardcalls.h
Solution File/src/source/: main.c  wizardcalls.c  wizardcalls.global.x64.asm  wizardcalls.x64.asm
Source/: .editorconfig  Solution.sln  main.c
Source/Include/: HellsHall.h  Structs.h  wizardcalls.h
Source/Source/: HellsHall.c  HellsHall.x64.asm  main.c  wizardcalls.x64.asm
Source/proj/: Solution.vcxproj  Solution.vcxproj.filters
Templates/: HellsHall.h
docs/en/module/: adding-new-hash-algorithms.md  adding-new-hashes.md  type-conversion.md
docs/en/tutorials/: Writing-a-compilation-script-for-the-injector-with-wizardcalls.md  Writing-an-injector-with-wizardcalls.md
docs/en/usage/: command line.md  scripting.md  template.md
example-output/globals/: wizardcalls.c  wizardcalls.global.x64.asm  wizardcalls.h
example-output/position-independent/: wizardcalls.c  wizardcalls.h  wizardcalls.x64.asm
src/wizardcalls/: __init__.py  __main__.py  args.py  cli.py  colors.py  core.py
src/wizardcalls/rsrc/code/solution file/proj/: wizardcalls.filters  wizardcalls.vcxproj
src/wizardcalls/rsrc/code/solution file/src/include/: wizardcalls.h
src/wizardcalls/rsrc/code/solution file/src/source/: main.c
src/wizardcalls/rsrc/code/templates/: Jenkins.c  Murmur.c
src/wizardcalls/rsrc/data/: nt_api.json  type-conversion.json
tests/: test_build.py
