# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://hatch.pypa.io/1.9/config/build/

# Define the build system
[build-system]
requires        = ["hatchling"]
build-backend   = "hatchling.build"

# Set module metadata
[project]
name        = "wizardcalls"
readme      = "Readme.md"
version     = "2.0.0"
description = "An indirect syscall code generation utility for C/C++ windows impants"
authors      = [ 
    {name="wizardy0ga"} 
]
requires-python = ">=3.10"
# Create 'wizardcalls' command pointing at main function
[project.scripts]
wizardcalls = "wizardcalls.cli:main"

# Define files to include in the wheel & source distributions. These are the final files
# to be included in the code base.
[tool.hatch.build]
sources = ["src"]